tests/baselines/reference/classOverloadForFunction.errors.txt
tests/cases/compiler/classOverloadForFunction.ts(2,10): error TS2300: Duplicate identifier 'foo'.


==== tests/cases/compiler/classOverloadForFunction.ts (1 errors) ====
    class foo { };
    function foo() {}
             ~~~
!!! error TS2300: Duplicate identifier 'foo'.
    